# portal64-still-alive

./: $  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.docker  README.md  make_release_build.sh  portal.ld  romfix64.sh  setup.sh  version.txt
asm/: CMakeLists.txt  boot.s  entry.s  macros.inc  rom_header.s  sound_data.s
assets/: CMakeLists.txt  closecaption_english.txt
assets/fonts/: CMakeLists.txt  dejavu_sans_book_8.json  dejavu_sans_license.txt  font_characters.txt  liberation_mono.json
assets/materials/: CMakeLists.txt  ball_catcher.skm.yaml  chell.skm.yaml  chell.smk.yaml  elevator.skm.yaml  hud.skm.yaml  images.skm.yaml  materials.yaml  objects.skm.yaml  overlays.skm.yaml  static.skm.yaml  ui.skm.yaml
assets/models/: CMakeLists.txt  fleck_ash2.blend  fleck_ash2.flags  grav_flare.blend  grav_flare.flags  pedestal.blend  valve_animation.blend  window_frame.blend  window_frame_medium.blend  window_frame_small.blend
assets/sound/: CMakeLists.txt
assets/test_chambers/: CMakeLists.txt  materials.blend  test_chamber_00.blend
assets/translations/: CMakeLists.txt  extra_brazilian.txt  extra_bulgarian.txt  extra_czech.txt  extra_danish.txt  extra_dutch.txt  extra_english.txt  extra_finnish.txt  extra_french.txt  extra_german.txt  extra_greek.txt  extra_hungarian.txt  extra_italian.txt  extra_latam.txt  extra_norwegian.txt  extra_polish.txt  extra_portuguese.txt  extra_romanian.txt  extra_russian.txt  extra_spanish.txt  extra_swedish.txt  extra_turkish.txt  extra_ukrainian.txt
skelatool64/lua/: CMakeLists.txt  box3.lua  definition_writer.lua  quaternion.lua  scene.lua  sk_animation.lua  sk_definition_writer.lua  sk_math.lua  sk_scene.lua  vector3.lua
skeletool64/: .gitignore  CMakeLists.txt  config.ld  main.cpp
skeletool64/cmake/: FindCImg.cmake  FindLuac.cmake
skeletool64/lua/: CMakeLists.txt  sk_animation.lua  sk_definition_writer.lua  sk_math.lua  sk_scene.lua
skeletool64/schema/: material-schema.json
skeletool64/src/: BoneHierarchy.cpp  BoneHierarchy.h  CFileDefinition.cpp  CFileDefinition.h  CommandLineParser.cpp  CommandLineParser.h  DisplayList.cpp  DisplayListSettings.cpp  DisplayListSettings.h  ErrorResult.h  ExtendedMesh.cpp  FileUtils.cpp  MathUtil.cpp  MeshWriter.cpp  MeshWriter.h  RenderChunk.h  SceneWriter.cpp  StringUtls.cpp
src/: CMakeLists.txt  defs.h  main.c  main.h
src/audio/: audio.c  audio.h  audiomgr.c  clips.c  clips.h  soundarray.c  soundarray.h  soundplayer.c  soundplayer.h
src/controls/: controller.c  controller.h  controller_actions.c  controller_actions.h  rumble_pak.c  rumble_pak.h  rumble_pak_clip.c  rumble_pak_clip.h
src/debugger/: debug.c  debug.h  usb.c  usb.h
src/decor/: decor_object.c  decor_object.h  decor_object_list.c  decor_object_list.h
src/effects/: effect_definitions.c  effect_definitions.h  effects.c  effects.h  fail_portal_splash.c  fail_portal_splash.h  portal_trail.c  portal_trail.h  splash_particle_effect.c  splash_particle_effect.h
src/font/: dejavu_sans.h  dejavu_sans_images.c  dejavusans.c  dejavusans.h  dejavusans_images.c  font.c  font.h  liberation_mono.c  liberation_mono.h  liberation_mono_images.c
src/graphics/: color.c  color.h  debug_render.c  debug_render.h  graphics.c  graphics.h  image.c  image.h  initgfx.c  initgfx.h  profile_task.c  profile_task.h  render_scene.c  render_scene.h  renderstate.c  renderstate.h  screen_clipper.c  screen_clipper.h
src/levels/: checkpoint.c  checkpoint.h  credits.c  credits.h  cutscene_runner.c  cutscene_runner.h  intro.c  intro.h  level_def_gen.h  level_definition.c  level_definition.h  level_metadata.h  levels.c  levels.h  material_state.c  material_state.h  savefile.c  savefile.h  static_render.c  static_render.h
src/locales/: locales.c  locales.h
src/materials/: light.c  light.h  point_light_rendered.c  point_light_rendered.h  point_light_rendered_tex.inc.h  shadow_caster.c  shadow_caster.h  subject.c  subject.h
src/math/: basis.c  basis.h  box2d.c  box2d.h  box3d.c  box3d.h  boxs16.h  mathf.c  mathf.h  matrix.c  matrix.h  plane.c  plane.h  quaternion.c  quaternion.h  range.h  ray.c  ray.h  rotated_box.c  rotated_box.h  transform.c  transform.h  vector2.c  vector2.h  vector2s16.c  vector2s16.h  vector3.c  vector3.h  vector4.c  vector4.h
src/menu/: audio_options.c  audio_options.h  cheat_codes.c  cheat_codes.h  confirmation_dialog.c  confirmation_dialog.h  controls.c  controls.h  game_menu.c  game_menu.h  gameplay_options.c  gameplay_options.h  joystick_options.c  joystick_options.h  landing_menu.c  landing_menu.h  load_game.c  load_game.h  main_menu.c  main_menu.h  menu.c  menu.h  menu_builder.c  menu_builder.h  menu_state.h  new_game_menu.c  new_game_menu.h  options_menu.c  options_menu.h  save_game_menu.c  save_game_menu.h  savefile_list.c  savefile_list.h  tabs.c  tabs.h  text_manipulation.c  text_manipulation.h  translations.c  translations.h  video_options.c  (+1 more)
src/models/: cube.inc.h  ground.h  ground_geo.inc.h  models.c  models.h  portal_mask.inc.h  portal_outline.inc.h  shadow_caster.h  shadow_caster_geo.inc.h  sphere.h  sphere_geo.inc.h  subject.h  subject_geo.inc.h
src/physics/: collision.c  collision.h  collision_box.c  collision_box.h  collision_capsule.c  collision_capsule.h  collision_cylinder.c  collision_cylinder.h  collision_edge.h  collision_object.c  collision_object.h  collision_point.c  collision_point.h  collision_quad.c  collision_quad.h  collision_scene.c  collision_scene.h  collision_sphere.c  collision_sphere.h  collision_tetrahedron.c  collision_tetrahedron.h  compound_collider.c  compound_collider.h  config.h  contact_insertion.c  contact_insertion.h  contact_solver.c  contact_solver.h  debug_renderer.c  debug_renderer.h  epa.c  epa.h  gjk.c  gjk.h  line.c  line.h  mesh_collider.c  mesh_collider.h  point_constraint.c  point_constraint.h  (+8 more)
src/player/: grab_rotation.c  grab_rotation.h  player.c  player.h  player_rumble_clips.c  player_rumble_clips.h
src/savefile/: checkpoint.c  checkpoint.h  savefile.c  savefile.h  scene_serialize.c  serializer.c  (+2 more)
(+718 files in other folders)
